# projectw

./: .eslintrc.js  .gitignore  Dockerfile  README.md  SETUP_GUIDE.md  complete-vps-setup.sh  deploy-to-vps.sh  deploy-vps.sh  ecosystem.config.js  eslint.config.js  install-vps-basics.sh  next.config.ts  package-lock.json  package.json  replit.md  run.sh  tailwind.config.js
backend/: .env.prod.example  Cargo.toml  INFRASTRUCTURE_DEPLOYMENT.md  INSTALL_DOCKER.md  PRIVACY_BLOCKCHAIN_DESIGN.md  QUICK_SETUP_NOTES.md  README-multi-vps-deployment.md  README.md  database-vps-setup.sh  docker-compose.prod.external-db.yml  docker-compose.prod.yml  docker-compose.yml
backend/blockchain/: Cargo.toml  Dockerfile  privacy_node.rs
backend/docker/: docker-compose.grafana.yml  docker-compose.light.yml  filebeat.yml  log-health-check.sh
backend/ghost/: Dockerfile  config.production.json
backend/identity/: Cargo.toml  decentralized_identity.rs
backend/mautic/: Dockerfile  local.php
backend/microservices/: BACKUP_DISASTER_RECOVERY.md  MULTI_REGION_STRATEGY.md  OS_LEVEL_VPS_CLONING.md  dev-compose.yml  docker-compose.yml
backend/network/: Cargo.toml  encrypted_communication.rs
backend/scripts/: Dockerfile.monitor  clone-scheduler.sh  cloning_config.conf  cloning_config.conf.local  complete-activation.sh  direct_tar_transfer.sh  dry_run_output.txt  lightning-deploy.sh  monitor.js  os_cloning_system.sh  os_cloning_system.sh.backup_20251015_055823  package-lock.json  package.json  restore-databases.sh  secret-setup.sh  target-vps-recovery.sh  vps_disaster_recovery.sh
(+424 files in other folders)
