[workspace]
members = [
    "blockchain",
    "identity",
    "network",
]

[workspace.dependencies]
# Cryptography
ed25519-dalek = "1.0"
x25519-dalek = "1.1"
aes-gcm = "0.9"
sha3 = "0.9"

# Networking
tokio = { version = "1", features = ["full"] }
hyper = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
rand = "0.8"
chrono = "0.4"
base64 = "0.21"
hex = "0.4"
