[package]
name = "decentralized-identity"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
